--- a/src/primereact-theme.css
+++ b/src/primereact-theme.css
@@ -5,7 +5,7 @@
   --color-level-1: #ffffff;
   --color-level-2: #f5f5f5;
   --color-level-3: #d9d9d9;
-  --color-warning: #E9D502;
+  --color-warning: #e9d602c4;
   --color-striped: #e0dede;
   --primary-color: var(--orange-1);
   --font-family: Segoe UI;
