--- a/src/primereact-theme.css
+++ b/src/primereact-theme.css
@@ -3406,7 +3406,8 @@
   text-align: left;
   border: 1px solid #dee2e6;
   border-width: 0 0 1px 0;
-  padding: 1rem 1rem;
+  /* padding: 1rem 1rem; */
+  padding: 0;
 }
 .p-datatable .p-datatable-tbody > tr > td .p-row-toggler,
 .p-datatable .p-datatable-tbody > tr > td .p-row-editor-init,
